--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
+    "autoprefixer": "^10.4.14",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
-    "prettier": "2.8.7"
+    "postcss": "^8.4.21",
+    "prettier": "2.8.7",
+    "tailwindcss": "^3.3.1"
   }
 }
